--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PULL_REQUEST_NUM: $(echo "${{ github.event.issue.pull_request.url }}" | awk -F/ '{print $NF}')
-      LATEST_COMMIT: $(curl -s -H "Authorization:Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/$(echo '${{ github.event.issue.pull_request.url }}' | awk -F/ '{print $NF}')" > pr_details.json && jq -r '.head.sha' pr_details.json)
+      COMMIT_ID: $(curl -s -H "Authorization:Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/$(echo '${{ github.event.issue.pull_request.url }}' | awk -F/ '{print $NF}')" > pr_details.json && jq -r '.head.sha' pr_details.json)
       COMMENT_BODY: ${{ github.event.comment.body }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -39,7 +39,7 @@ jobs:
       id: parse
       run: |
         echo "PULL_REQUEST_NUM=${{ env.PULL_REQUEST_NUM }}" | tee -a "$GITHUB_OUTPUT"
-        echo "LATEST_COMMIT=${{ env.LATEST_COMMIT }}" | tee -a "$GITHUB_OUTPUT"
+        echo "COMMIT_ID=${{ env.COMMIT_ID }}" | tee -a "$GITHUB_OUTPUT"
         echo "COMMENT_BODY='${{ env.COMMENT_BODY }}'" | tee -a "$GITHUB_OUTPUT"
         reg="run (buildall|compile|p0|p1|feut|beut|external|clickbench|pipelinex_p0|arm|tpch)( [1-9]*[0-9]+)*"
         COMMENT_TRIGGER_TYPE="$(echo "${COMMENT_BODY}" | xargs | grep -E "${reg}" | awk -F' ' '{print $2}' | sed -n 1p)"
@@ -47,10 +47,10 @@ jobs:
         echo "COMMENT_TRIGGER_TYPE=${COMMENT_TRIGGER_TYPE}" | tee -a "$GITHUB_OUTPUT"
         echo "COMMENT_REPEAT_TIMES=${COMMENT_REPEAT_TIMES}" | tee -a "$GITHUB_OUTPUT"
 
-    # - name: "Checkout PR ${{ steps.parse.outputs.PULL_REQUEST_NUM }}, commit ${{ steps.parse.outputs.LATEST_COMMIT }}"
+    # - name: "Checkout PR ${{ steps.parse.outputs.PULL_REQUEST_NUM }}, commit ${{ steps.parse.outputs.COMMIT_ID }}"
     #   uses: actions/checkout@v4
     #   with:
-    #     ref: ${{ steps.parse.outputs.LATEST_COMMIT }}
+    #     ref: ${{ steps.parse.outputs.COMMIT_ID }}
 
     - name: "Checkout master"
       uses: actions/checkout@v4
@@ -86,36 +86,28 @@ jobs:
     - name: "Trigger or Skip fe ut"
       if: ${{ contains(fromJSON('["feut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
-        echo "GITHUB_TOKEN: ${GITHUB_TOKEN}"
         source ./regression-test/pipeline/common/teamcity-utils.sh
+        set -x
         if [[ ${{ steps.changes.outputs.changes_fe_ut }} == 'true' ]];then
           add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }}" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
         else
           skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }}"
         fi
 
-    - name: "Skip fe ut"
-      if: ${{ contains(fromJSON('["feut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) && steps.changes.outputs.changes_fe_ut == 'false' }}
-      run: |
-        source ./regression-test/pipeline/common/teamcity-utils.sh
-        skip_teamcity_pipeline "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }}"
-
     # - name: "Setup tmate session"
     #   if: ${{ failure() }}
     #   uses: mxschmitt/action-tmate@v3
 
-
-    - name: "Trigger be ut"
-      if: ${{ contains(fromJSON('["beut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) && steps.changes.outputs.changes_be_ut == 'true' }}
+    - name: "Trigger or Skip be ut"
+      if: ${{ contains(fromJSON('["beut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        cancel_and_add_build
-
-    - name: "Skip be ut"
-      if: ${{ contains(fromJSON('["beut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) && steps.changes.outputs.changes_be_ut == 'false' }}
-      run: |
-        source ./regression-test/pipeline/common/teamcity-utils.sh
-        skip_build
+        set -x
+        if [[ ${{ steps.changes.outputs.changes_be_ut }} == 'true' ]];then
+          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }}" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
+        else
+          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }}"
+        fi
 
 
 
