--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -24,24 +24,48 @@ on:
 jobs:
   check-comment-if-need-to-trigger-teamcity:
 
-    # This job only runs for pull request comments
-    # if: ${{ github.event.issue.pull_request && contains(fromJSON('["run buildall", "run compile", "run beut", "run feut", "run p0", "run p1", "run external", "run pipelinex_p0", "run clickbench", "run arm", "run tpch"]'), github.event.comment.body) }}
-    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, 'run') && ( contains(github.event.comment.body, 'buildall') || contains(github.event.comment.body, 'compile') || contains(github.event.comment.body, 'beut') || contains(github.event.comment.body, 'feut') || contains(github.event.comment.body, 'p0') || contains(github.event.comment.body, 'p1') || contains(github.event.comment.body, 'external') || contains(github.event.comment.body, 'pipelinex_p0') || contains(github.event.comment.body, 'clickbench') || contains(github.event.comment.body, 'arm') || contains(github.event.comment.body, 'tpch') ) }}
+    # This job only runs for pull request comments, and comment body contains 'run'
+    # if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, 'run') && ( contains(github.event.comment.body, 'buildall') || contains(github.event.comment.body, 'compile') || contains(github.event.comment.body, 'beut') || contains(github.event.comment.body, 'feut') || contains(github.event.comment.body, 'p0') || contains(github.event.comment.body, 'p1') || contains(github.event.comment.body, 'external') || contains(github.event.comment.body, 'pipelinex_p0') || contains(github.event.comment.body, 'clickbench') || contains(github.event.comment.body, 'arm') || contains(github.event.comment.body, 'tpch') ) }}
+    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, 'run') }}
 
     runs-on: ubuntu-latest
     env:
       COMMENT_BODY: ${{ github.event.comment.body }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      TT: ${{ curl -s -H "Authorization:Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/${PULL_REQUEST_NUM}" | jq -r '.base.ref' }}
 
     steps:
     - name: "Parse PR comment"
       id: parse
       run: |
+        if [[ "${COMMENT_BODY}" == *'run buildall'* ||
+            "${COMMENT_BODY}" == *'run compile'* ||
+            "${COMMENT_BODY}" == *'run beut'* ||
+            "${COMMENT_BODY}" == *'run feut'* ||
+            "${COMMENT_BODY}" == *'run p0'* ||
+            "${COMMENT_BODY}" == *'run p1'* ||
+            "${COMMENT_BODY}" == *'run external'* ||
+            "${COMMENT_BODY}" == *'run pipelinex_p0'* ||
+            "${COMMENT_BODY}" == *'run clickbench'* ||
+            "${COMMENT_BODY}" == *'run arm'* ||
+            "${COMMENT_BODY}" == *'run tpch'* ]]; then
+            echo "comment_trigger=true" | tee -a "$GITHUB_OUTPUT"
+        else
+            echo "find no keyword in comment body, skip this action."
+            exit
+        fi
+
+        echo "GITHUB_EVENT_PATH: $GITHUB_EVENT_PATH"
+        echo "TT: $TT"
+
         PULL_REQUEST_NUM="$(echo "${{ github.event.issue.pull_request.url }}" | awk -F/ '{print $NF}')"
-        COMMIT_ID_FROM_TRIGGER="$(curl -s -H "Authorization:Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/$(echo '${{ github.event.issue.pull_request.url }}' | awk -F/ '{print $NF}')" > pr_details.json && jq -r '.head.sha' pr_details.json)"
+        COMMIT_ID_FROM_TRIGGER="$(curl -s -H "Authorization:Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/${PULL_REQUEST_NUM}" | jq -r '.head.sha')"
+        TARGET_BRANCH="$(curl -s -H "Authorization:Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/${PULL_REQUEST_NUM}" | jq -r '.base.ref')"
         echo "PULL_REQUEST_NUM=${PULL_REQUEST_NUM}" | tee -a "$GITHUB_OUTPUT"
         echo "COMMIT_ID_FROM_TRIGGER=${COMMIT_ID_FROM_TRIGGER}" | tee -a "$GITHUB_OUTPUT"
+        echo "TARGET_BRANCH='${TARGET_BRANCH}'" | tee -a "$GITHUB_OUTPUT"
         echo "COMMENT_BODY='${COMMENT_BODY}'" | tee -a "$GITHUB_OUTPUT"
+
         reg="run (buildall|compile|p0|p1|feut|beut|external|clickbench|pipelinex_p0|arm|tpch)( [1-9]*[0-9]+)*"
         COMMENT_TRIGGER_TYPE="$(echo "${COMMENT_BODY}" | xargs | grep -E "${reg}" | awk -F' ' '{print $2}' | sed -n 1p)"
         COMMENT_REPEAT_TIMES="$(echo "${COMMENT_BODY}" | xargs | grep -E "${reg}" | awk -F' ' '{print $3}' | sed -n 1p)"
@@ -49,32 +73,34 @@ jobs:
         echo "COMMENT_REPEAT_TIMES=${COMMENT_REPEAT_TIMES}" | tee -a "$GITHUB_OUTPUT"
 
     - name: "Checkout master"
+      if: ${{ steps.parse.outputs.comment_trigger }}
       uses: actions/checkout@v4
 
     - name: "Check if pr need run build"
+      if: ${{ steps.parse.outputs.comment_trigger }}
       id: changes
       run: |
         source regression-test/pipeline/common/github-utils.sh
         set -x
         _get_pr_changed_files "${{ steps.parse.outputs.PULL_REQUEST_NUM }}"
         if file_changed_fe_ut; then
-          echo "changes_fe_ut=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_fe_ut=true" | tee -a "$GITHUB_OUTPUT"
         fi
         if file_changed_be_ut; then
-          echo "changes_be_ut=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_be_ut=true" | tee -a "$GITHUB_OUTPUT"
         fi
         if file_changed_ckb; then
-          echo "changes_ckb=true" | tee -a "$GITHUB_OUTPUT"
-          echo "tpch=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_ckb=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_tpch=true" | tee -a "$GITHUB_OUTPUT"
         fi
         if file_changed_regression_p0; then
-          echo "changes_p0=true" | tee -a "$GITHUB_OUTPUT"
-          echo "changes_external=true" | tee -a "$GITHUB_OUTPUT"
-          echo "changes_pipelinex_p0=true" | tee -a "$GITHUB_OUTPUT"
-          echo "changes_arm=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_p0=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_external=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_pipelinex_p0=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_arm=true" | tee -a "$GITHUB_OUTPUT"
         fi
         if file_changed_regression_p1; then
-          echo "changes_p1=true" | tee -a "$GITHUB_OUTPUT"
+          echo "changed_p1=true" | tee -a "$GITHUB_OUTPUT"
         fi
 
     # - name: "Setup tmate session"
@@ -82,141 +108,138 @@ jobs:
     #   uses: mxschmitt/action-tmate@v3
 
     - name: "Trigger or Skip feut"
-      if: ${{ contains(fromJSON('["feut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["feut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
         set -x
-        if [[ ${{ steps.changes.outputs.changes_fe_ut }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "feut" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "feut"
-        fi
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_fe_ut }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "feut" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
+
 
     - name: "Trigger or Skip beut"
-      if: ${{ contains(fromJSON('["beut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["beut", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
         set -x
-        if [[ ${{ steps.changes.outputs.changes_be_ut }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "beut" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "beut"
-        fi
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_be_ut }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "beut" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip compile"
-      if: ${{ contains(fromJSON('["compile", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["compile", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
         set -x
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "compile" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "compile"
-        fi
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_p0 }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "compile" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip p0"
-      if: ${{ contains(fromJSON('["p0", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["p0", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
-        set -x
         if [[ ${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }} == "buildall" ]]; then
-          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger p0"
-          exit
+          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger p0" && exit
         fi
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "p0" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "p0"
-        fi
+        set -x
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_p0 }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "p0" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip p1"
-      if: ${{ contains(fromJSON('["p1", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["p1", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
         COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
-        set -x
         if [[ ${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }} == "buildall" ]]; then
-          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger p1"
-          exit
+          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger p1" && exit
         fi
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "p1" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "p1"
-        fi
+        set -x
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_p1 }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "p1" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip external"
-      if: ${{ contains(fromJSON('["external", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["external", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
-        set -x
         if [[ ${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }} == "buildall" ]]; then
-          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger external"
-          exit
+          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger external" && exit
         fi
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "external" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "external"
-        fi
+        set -x
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_external }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "external" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip pipelinex_p0"
-      if: ${{ contains(fromJSON('["pipelinex_p0", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["pipelinex_p0", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
-        set -x
         if [[ ${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }} == "buildall" ]]; then
-          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger pipelinex_p0"
-          exit
+          echo "COMMENT_TRIGGER_TYPE is buildall, trigger compile is enough, compile will trigger pipelinex_p0" && exit
         fi
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "pipelinex_p0" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "pipelinex_p0"
-        fi
+        set -x
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_pipelinex_p0 }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "pipelinex_p0" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip arm"
-      if: ${{ contains(fromJSON('["arm", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["arm", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
         set -x
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "arm" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "arm"
-        fi
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_arm }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "arm" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip clickbench"
-      if: ${{ contains(fromJSON('["clickbench", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["clickbench", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
         set -x
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "clickbench" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "clickbench"
-        fi
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_ckb }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "clickbench" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: "Trigger or Skip tpch"
-      if: ${{ contains(fromJSON('["tpch", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
+      if: ${{ steps.parse.outputs.comment_trigger && contains(fromJSON('["tpch", "buildall"]'), steps.parse.outputs.COMMENT_TRIGGER_TYPE) }}
       run: |
         source ./regression-test/pipeline/common/teamcity-utils.sh
-        COMMIT_ID_FROM_TRIGGER=${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}
-        set -x
         if [[ ${{ steps.parse.outputs.COMMENT_TRIGGER_TYPE }} == "buildall" ]]; then
-          echo "COMMENT_TRIGGER_TYPE is buildall, trigger clickbench is enough, clickbench will trigger tpch"
-          exit
+          echo "COMMENT_TRIGGER_TYPE is buildall, trigger clickbench is enough, clickbench will trigger tpch" && exit
         fi
-        if [[ ${{ steps.changes.outputs.changes_p0 }} == 'true' ]];then
-          add_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "tpch" "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
-        else
-          skip_build "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" "tpch"
-        fi
+        set -x
+        trigger_or_skip_build \
+          "${{ steps.changes.outputs.changed_tpch }}" \
+          "${{ steps.parse.outputs.PULL_REQUEST_NUM }}" \
+          "${{ steps.parse.outputs.COMMIT_ID_FROM_TRIGGER }}" \
+          "tpch" \
+          "${{ steps.parse.outputs.COMMENT_REPEAT_TIMES }}"
