--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -36,6 +36,7 @@ jobs:
     - name: "Parse PR comment"
       id: parse
       run: |
+        COMMENT_BODY=$(echo "${COMMENT_BODY}" | xargs)
         if [[ "${COMMENT_BODY}" == *'run buildall'* ||
             "${COMMENT_BODY}" == *'run compile'* ||
             "${COMMENT_BODY}" == *'run beut'* ||
