--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -65,8 +65,8 @@ jobs:
         reg="run (buildall|compile|p0|p1|feut|beut|external|clickbench|pipelinex_p0|arm|tpch)( [1-9]*[0-9]+)*"
         COMMENT_TRIGGER_TYPE="$(echo "${COMMENT_BODY}" | xargs | grep -E "${reg}" | awk -F' ' '{print $2}' | sed -n 1p)"
         COMMENT_REPEAT_TIMES="$(echo "${COMMENT_BODY}" | xargs | grep -E "${reg}" | awk -F' ' '{print $3}' | sed -n 1p)"
-        echo "COMMENT_TRIGGER_TYPE=${COMMENT_TRIGGER_TYPE}" | tee -a "$GITHUB_OUTPUT"
-        echo "COMMENT_REPEAT_TIMES=${COMMENT_REPEAT_TIMES}" | tee -a "$GITHUB_OUTPUT"
+        echo "COMMENT_TRIGGER_TYPE='${COMMENT_TRIGGER_TYPE}'" | tee -a "$GITHUB_OUTPUT"
+        echo "COMMENT_REPEAT_TIMES='${COMMENT_REPEAT_TIMES}'" | tee -a "$GITHUB_OUTPUT"
 
     - name: "Checkout master"
       if: ${{ steps.parse.outputs.comment_trigger }}
